--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,8 @@
     <ListView
         android:id="@+id/list"
         android:layout_width="409dp"
-        android:layout_height="734dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintBottom_toTopOf="@id/button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -36,7 +36,9 @@
         android:layout_marginStart="315dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="5dp"
-        android:text="Switch"
+        android:layout_marginBottom="20dp"
+        android:text="@string/switch_text"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
